# ving

./: .dockerignore  Dockerfile  Dockerfile.cron  README.md  main.py  pyproject.toml  ving.py
.github/workflows/: build-cron.yml  build-web.yml  ci-cd.yml  ci.yml  deploy.yml  test-runner.yml
helm-chart/: Chart.yaml  deployment.yaml  values.yaml
helm-chart/templates/: _helpers.tpl  cronjob.yaml  deployment.yaml  service.yaml
k8s/: deployment.yaml  service.yaml
mysite/: logging.conf  manage.py  settings.py
mysite/accounts/: forms.py  models.py  urls.py  views.py
mysite/accounts/migrations/: 0001_initial.py
mysite/main/: admin.py  forms.py  models.py  tests.py  urls.py  utils.py  views.py
mysite/main/migrations/: 0001_add_prisabonnement.py  0002_initial.py  0003_remove_prisabonnement_maks_pris.py  0004_vingurl.py  0005_alter_prisabonnement_destinasjon_and_more.py  0006_alter_personligurl_url.py  0007_personligurl_navn.py  0008_vingdata_hjemreise_dato.py  0009_vingdata_vingurl.py  0010_remove_vingdata_vingurl.py  0011_alter_vingdata_reiselengde.py
mysite/mysite/: settings.py  urls.py
mysite/templates/: .skal_slettes_nytt_abonnement.html  base.html  mine_abonnement.html  nytt_abonnement.html  personlig_sok.html  ving_historikk.html  ving_liste.html
mysite/templates/accounts/: activation_email.html  activation_failed.html  activation_sent.html  activation_success.html  login.html  password_change.html  password_change_done.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.txt  (+3 more)
(+8 files in other folders)
