[project]
name = "ving"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "crispy-bootstrap5>=2025.6",
    "django>=5.2.5",
    "django-crispy-forms>=2.4",
    "django-stubs>=5.2.2",
    "fastapi>=0.116.1",
    "gunicorn>=23.0.0",
    "playwright>=1.55.0",
    "psycopg2-binary>=2.9.9",
    "python-decouple>=3.8",
    "requests>=2.32.5",
    "sqlmodel>=0.0.24",
    "whitenoise>=6.9.0",
]
